syntax="proto3";

package com.axgrid.udp;

option java_package = "com.axgrid.udp";
option java_multiple_files = true;
option csharp_namespace = "AxGrid.Internal.Proto";

enum PacketMode {
    PM_OPTIONAL_CONSISTENTLY = 0;  // Optional last id
    PM_OPTIONAL = 1;               // Optional
    PM_MANDATORY_CONSISTENTLY = 3; // Mandatory ordered
    PM_MANDATORY = 4;              // Mandatory unordered
    PM_SERVICE = 10;               // Service layer
}

enum PacketTag {
    PT_PAYLOAD = 0;      // Plain payload
    PT_GZIP_PAYLOAD = 1; // GZip payload
    PT_PING = 7;         // Ping
    PT_DONE = 8;         // Packet response
}

message Packet {
    bytes payload = 1;      // Payload
    uint64 id = 2;          // ID
    PacketTag tag = 3;      // TAG
    bytes parts = 4;        // PARTS in Bytes
    uint32 parts_count = 5; // PARTS_COUNT
    PacketMode mode = 6;    // MODE
    uint32 mtu = 7;         // Current MTU
}

